reformat + restoration from prod content + wordpress pinned + desc changed ?!

--- a/01-cv-portfolio/css/portfolio.css
+++ b/01-cv-portfolio/css/portfolio.css
@@ -35,6 +35,8 @@
 
 .portfolio-section .p-item a{ display: inline; color: rgb(74, 0, 114) }
 
+.about-section a{ display: inline; color: rgb(74, 0, 114) }
+
 
 
 .portfolio-section .p-item { color: rgb(20, 20, 20) ;
