--- a/01-cv-portfolio/css/styles.css
+++ b/01-cv-portfolio/css/styles.css
@@ -149,7 +149,7 @@ header .downlad-btn:hover{ -webkit-transform: translateY(-4px); transform: trans
 --------------------------------- */
 
 .intro-section{ padding-top: 200px; position: relative; background-size: 100%; 
-	z-index: 1;background-image: url(../../images/4dv.jpg); }
+	z-index: 1;background-image: url(../../images/4dv.jpg);  background-size: cover; background-position: center center;}
 
 .intro-section:before{ content:''; z-index: -1; position: absolute; top: 0; bottom: 0; left: 0; 
 	right: 0; background: rgba(0,0,0, .2); }
